# ModelColosseum

./: .gitignore  AGENTS.md  CLAUDE.md  DISCOVERY-SUMMARY.md  DOC-RECONCILIATION.md  IMPLEMENTATION-PLAN.md  IMPLEMENTATION-ROADMAP.md  README.md  SESSION-LOG.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.codex/: verify.commands
.codex/environments/: environment.toml
.github/workflows/: test.yml
docs/: evaluation-methodology.md
script/: build_and_run.sh
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: benchmark.rs  db.rs  debate.rs  elo.rs  evaluation.rs  lib.rs  main.rs  ollama.rs  prompts.rs
src/components/: AppShell.tsx  DebatePanel.tsx  DebateSetup.tsx  DebateViewer.tsx  ModelSelector.tsx  Skeleton.tsx
src/components/benchmark/: AutoJudgePanel.tsx  BenchmarkLeaderboard.tsx  BlindCompare.tsx  OutputModal.tsx  ResultsGrid.tsx  RunComparison.tsx  RunEvidencePanel.tsx  RunHistory.tsx  ScoreAllMode.tsx  StarRating.tsx
src/hooks/: useAutoJudgeEvents.ts  useBenchmarkEvents.ts  useDebateEvents.ts  useSparringEvents.ts
src/pages/: Arena.tsx  Benchmark.tsx  History.tsx  Leaderboard.tsx  Settings.tsx  SparringRing.tsx
src/stores/: appStore.ts  benchmarkStore.ts  debateStore.ts  sparringStore.ts
src/utils/: download.ts
