[package]
name = "model-colosseum"
version = "0.1.0"
description = "A local-first desktop app for evaluating Ollama models"
authors = ["you"]
edition = "2021"

[lib]
name = "model_colosseum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
sysinfo = "0.31"
dirs = "5"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
